# MetaMask-backend

./: README.md
app/: .env.example  Cargo.toml
app/src/: config.rs  error.rs  main.rs  router.rs  state.rs
app/src/handlers/: ai.rs  audit.rs  execution.rs  permission.rs
app/src/models/: ai.rs  audit.rs  execution.rs  mod.rs  permission.rs
app/src/services/: mod.rs  oneshot.rs  permission.rs  venice.rs
